# py_scigen

./: Dockerfile  Makefile  OUTPUT_SUMMARY.md  PYTHONIC_IMPROVEMENTS.md  README.md  demo_paper.bib  demo_paper.tex  pyproject.toml  setup.py
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: generate_paper.py  grammar_basics.py
output/: dia0.dot  dia0.eps  dia1.dot  dia1.eps  dia2.dot  dia2.eps  dia3.dot  dia3.eps  figure0.eps  figure1.eps  figure2.eps  figure3.eps  figure4.eps  figure5.eps  paper.bib  paper.tex
src/scigen/: __init__.py  cli.py  config.py
src/scigen/core/: __init__.py  grammar.py
src/scigen/data/: scirules.txt
src/scigen/generators/: __init__.py  diagram.py  graph.py  paper.py
src/scigen/models/: __init__.py  paper.py  rules.py
src/scigen/processors/: __init__.py  text.py
src/scigen_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_grammar.py  test_paper.py  test_text_processor.py
